[package]
name = "codex-plus-plus"
version = "0.1.0"
edition = "2024"
description = "Local proxy launcher MVP for the Microsoft Store Codex app."
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
] }
